...
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        title = "Home"
        
        

        
        self.navigationController?.interactivePopGestureRecognizer?.isEnabled = false
//        self.showToast(message: "Your Toast Message", font: .systemFont(ofSize: 12.0))
...
        return button
    }()
    
    
    private let updateButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Update", for: .normal)
        button.setImage(UIImage(systemName: "plus.circle"), for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 16)
        button.setTitleColor(UIColor.mainBlueTint, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.alignImageAndTitleVertically()
        
...
        return button
    }()
    
    
    private let settingsButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Settings", for: .normal)
        button.setImage(UIImage(systemName: "gear"), for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 16)
        button.setTitleColor(UIColor.mainBlueTint, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.alignImageAndTitleVertically()
        
...
        
        return button
    }()
    
    private let seeMoreButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("See more", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 18)
        button.setTitleColor(UIColor.mainBlueTint, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        
        button.addTarget(self, action: #selector(clickSeeMoreButton), for: .touchUpInside)
        
...
                    if userAnno.uid == user.uid {
                        if questionWeight >= maxQuestionWeight {
                            userAnno.updateAnnotationPosition(withCoordinate: coordinate)
                            if(!self.userNotificationArray.contains(user.uid)){
                                
                                if(user.uid != Service.shared.loginUserId!){
//                                    self.present(showMainAlert(title: "Warning", text: "Infected Person found around you"),animated: true, completion: nil)
                                    self.showNotification()
                                }
                                
//                                self.present(showMainAlert(title: "Warning", text: "Infected Person found around you"),animated: true, completion: nil)
                            }
                            self.userNotificationArray.append(user.uid)
...
