//
//  LoginViewController.swift
//  NIBM Covid19
//
//  Created by Buddhimal Gunasekara on 8/29/20.
//  Copyright © 2020 NIBM. All rights reserved.
//

import UIKit
import FirebaseAuth
import FirebaseDatabase
import KeychainSwift
import LocalAuthentication

class LoginViewController: UIViewController {
    
    // MARK: - Properties
    private let titleLabel: UILabel = {
        let label = UILabel()
        label.text = "Sign In With Email"
        label.font = UIFont(name: "Avenir-Light", size: 20)
        
        return label
    }()
    
    private let closeButton: UIButton = {
        let button = UIButton()
        button.setTitle("Close", for: .normal)
        let attributedTitle = NSMutableAttributedString(string: "Close", attributes: [NSAttributedString.Key.font: UIFont.systemFont(ofSize: 13), NSAttributedString.Key.foregroundColor: UIColor.gray])
        
        button.addTarget(self, action: #selector(handleClose), for: .touchUpInside)
        
        button.setAttributedTitle(attributedTitle, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    private lazy var emailContainerView: UIView = {
        let view = UIView().inputContainerView(image: #imageLiteral(resourceName: "email"), textField: emailTextFiled)
        view.heightAnchor.constraint(equalToConstant: 50).isActive = true
        return view
    }()
    
    private lazy var passwordContainerView: UIView = {
        let view = UIView().inputContainerView(image: #imageLiteral(resourceName: "password"), textField: passwordTextFiled)
        view.heightAnchor.constraint(equalToConstant: 50).isActive = true
        return view
    }()
    
    private let emailTextFiled: UITextField = {
        return UITextField().textField(withPlaceholder: "Email", isSecureTextEntry: false)
    }()
    
    private let passwordTextFiled: UITextField = {
        return UITextField().textField(withPlaceholder: "Password", isSecureTextEntry: true)
    }()
    
    private let LogInButton: AuthButtonUIButton = {
        let button = AuthButtonUIButton(type: .system)
        button.setTitle("Log In", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 20)
        
        button.addTarget(self, action: #selector(handleSignIn), for: .touchUpInside)
        
        return button
    }()
    
    private let faceIdButton: AuthButtonUIButton = {
        let button = AuthButtonUIButton(type: .system)
        button.setTitle("Use Face ID", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 20)
        
        button.addTarget(self, action: #selector(handleSignInFaceId), for: .touchUpInside)
        
        return button
    }()

    
    
    let needAnAccountButton: UIButton = {
        
        let button = UIButton(type: .system)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 20)
        button.setTitleColor(UIColor(white: 1, alpha: 1), for: .normal)
        button.backgroundColor = UIColor.white
//        button.backgroundColor = UIColor.rgb(red: 161, green: 111, blue: 134)
        button.layer.cornerRadius = 5
        button.heightAnchor.constraint(equalToConstant: 50).isActive = true
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 24)
        
        let attributedTitle = NSMutableAttributedString(string: "Need an account?  ", attributes: [NSAttributedString.Key.font: UIFont.systemFont(ofSize: 16), NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        
        attributedTitle.append(NSAttributedString(string: "Sign Up", attributes: [NSAttributedString.Key.font: UIFont.boldSystemFont(ofSize: 16), NSAttributedString.Key.foregroundColor: UIColor.mainBlueTint]))
        
        
        button.addTarget(self, action: #selector(handleShowSignUp), for: .touchUpInside)
        
        button.setAttributedTitle(attributedTitle, for: .normal)
        return button
    }()
    
    func configureNavigationBar() {
        navigationController?.navigationBar.isHidden = true
//        navigationController?.navigationBar.barStyle = .black
    }

    
    // MARK: - Functions
    
    @objc func handleShowSignUp() {
        let vc = SignUpViewController()
        navigationController?.pushViewController(vc, animated: true)
    }
    
    @objc func handleClose(){
        let nav = UINavigationController(rootViewController: HomeViewController())
        
        nav.modalPresentationStyle = .fullScreen
        self.present(nav, animated: true, completion: nil)

    }
    
    @objc func handleSignInFaceId(){
        print("came")
        let context:LAContext = LAContext()
        
        if context.canEvaluatePolicy(.deviceOwnerAuthenticationWithBiometrics, error: nil)
        {
            context.evaluatePolicy(LAPolicy.deviceOwnerAuthenticationWithBiometrics, localizedReason: "Message") { (good, error) in
                if good {
                    //                    showUniversalLoadingView(true, loadingText: "Login In..")
                    
                    let keychain = KeychainSwift()
                    let un = keychain.get("userName")
                    let pw = keychain.get("password")
                    
                    if let userName = keychain.get("userName"),
                        let password = keychain.get("password") {
                        
                        Auth.auth().signIn(withEmail: un!, password: pw!) { (result, error) in
                            if let error = error {
                                let uialert = UIAlertController(title: "Error", message: error.localizedDescription , preferredStyle: UIAlertController.Style.alert)
                                uialert.addAction(UIAlertAction(title: "Okay", style: UIAlertAction.Style.default, handler: nil))
                                self.present(uialert, animated: true, completion: nil)
                                return
                            }
                            
                            Service.shared.loginUserId = Auth.auth().currentUser?.uid
                            
                            let nav = UINavigationController(rootViewController: HomeViewController())
                            
                            nav.modalPresentationStyle = .fullScreen
                            self.present(nav, animated: true, completion: nil)
                            
//                            showUniversalLoadingView(false, loadingText: "Login In..")
                        }
                        print("good")
                        
                        
                    } else {
                        DispatchQueue.main.async {
                            let uialert = UIAlertController(title: "Error", message: "Error witth login Face ID. Please user your username and password to login." , preferredStyle: UIAlertController.Style.alert)
                            uialert.addAction(UIAlertAction(title: "Okay", style: UIAlertAction.Style.default, handler: nil))
                            self.present(uialert, animated: true, completion: nil)
                            //                        return
                            print("Fail")
                        }
                        
                    }
                    
                    
                } else {
                    print("not Good")
                }
            }
        }
    
    
    }
    
    @objc func handleSignIn() {
        guard let email = emailTextFiled.text else { return }
        guard let password = passwordTextFiled.text else { return }
        
        
        if(validateLogin()){
            showUniversalLoadingView(true, loadingText: "Login In..")
            
            Auth.auth().signIn(withEmail: email, password: password) { (result, error) in
                if let error = error {
                    let uialert = UIAlertController(title: "Error", message: error.localizedDescription , preferredStyle: UIAlertController.Style.alert)
                    uialert.addAction(UIAlertAction(title: "Okay", style: UIAlertAction.Style.default, handler: nil))
                    self.present(uialert, animated: true, completion: nil)
                    return
                }
                
                Service.shared.loginUserId = Auth.auth().currentUser?.uid
                
                let keychain = KeychainSwift()
                
                keychain.set(email, forKey: "userName")
                keychain.set(password, forKey: "password")
                

                
                let nav = UINavigationController(rootViewController: HomeViewController())

                nav.modalPresentationStyle = .fullScreen
                self.present(nav, animated: true, completion: nil)
                
//                let keyWindow = UIApplication.shared.connectedScenes
//                .filter({$0.activationState == .foregroundActive})
//                .map({$0 as? UIWindowScene})
//                .compactMap({$0})
//                .first?.windows
//                .filter({$0.isKeyWindow}).first
//
////                print("hello........")
//                guard let controller = keyWindow?.rootViewController as? HomeViewController else { return }
//                print("hello........")
//                controller.configure()
                
                
                
//                self.dismiss(animated: true, completion: nil)
                
                showUniversalLoadingView(false, loadingText: "Login In..")
            }
        }

    }
    
    
    func validateLogin() -> Bool {
        
        let email = emailTextFiled.text
        let password = passwordTextFiled.text
        var isValid = true
        
        if(email == nil || email == "" ){
            
            isValid = false;
            
            let uialert = UIAlertController(title: "Error", message: "Please Enter Email Address" , preferredStyle: UIAlertController.Style.alert)
            uialert.addAction(UIAlertAction(title: "Okay", style: UIAlertAction.Style.default, handler: nil))
            self.present(uialert, animated: true, completion: nil)
            
        }
        
        if(password == nil || password == "" ){
            
            isValid = false;
            
            let uialert = UIAlertController(title: "Error", message: "Please Enter Password" , preferredStyle: UIAlertController.Style.alert)
            uialert.addAction(UIAlertAction(title: "Okay", style: UIAlertAction.Style.default, handler: nil))
            self.present(uialert, animated: true, completion: nil)
        }
        
        return (isValid)

    }
    
    // MARK: - Main Function
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
//        let keychain = KeychainSwift()
//        let userName = keychain.get("userName")
//        let pw = keychain.get("password")
//        let keychainLabel = "userName = \(userName!) password = \(pw!)"
//        print(keychainLabel)

        // Do any additional setup after loading the view.
        configureUI()
    }
    
    func configureUI(){
        
        configureNavigationBar()
        
        view.backgroundColor = UIColor.backgroundColor
        
        view.addSubview(titleLabel)
        view.addSubview(closeButton)
        
        closeButton.trailingAnchor.constraint(equalTo: view.trailingAnchor,constant: -10).isActive = true
        closeButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 5).isActive = true
        
        titleLabel.translatesAutoresizingMaskIntoConstraints = false
        titleLabel.centerXAnchor.constraint(equalTo: view.centerXAnchor).isActive = true
        titleLabel.topAnchor.constraint(equalTo: closeButton.bottomAnchor, constant: 10).isActive = true
        
        
        let stack = UIStackView(arrangedSubviews: [emailContainerView, passwordContainerView,LogInButton,faceIdButton,
                                                   needAnAccountButton
            
        ])
        stack.axis = .vertical
        stack.distribution = .fillProportionally
        stack.spacing = 24
        
        view.addSubview(stack)
        stack.anchor(top: titleLabel.bottomAnchor, left: view.leftAnchor, right: view.rightAnchor, paddingTop: 40, paddingLeft: 16, paddingRight: 16)
    }
    
}

