...
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()
    
    private let indexNoTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Index Number"
        textField.backgroundColor = .backgroundColor
        textField.borderStyle = .roundedRect
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()
    
    private let countryTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Country"
        textField.backgroundColor = .backgroundColor
        textField.borderStyle = .roundedRect
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()
    
...
        
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        title = "Profile"
        configureUI()
        getUserData()
    }
    
    @objc func handleLoginRegister() {
        handleRegister()
...
